--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js --exec babel-node --ignore src/public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js --exec babel-node --ignore src/public",
+    "start": "node dist/index.js",
+    "build": "babel src -d dist"
   },
   "keywords": [],
   "author": "",
