--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node --ignore src/public",
     "start": "node dist/index.js",
-    "build": "babel src -d dist"
+    "build": "babel src -d dist && ncp src/public/index.html dist/public/index.html && ncp src/public/main.css dist/public/main.css"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.17.2",
+    "ncp": "^2.0.0",
     "socket.io": "^4.4.0",
     "uuid": "^8.3.2"
   }
